CLEAN-UP: Clean up

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /.vscode
-/todo.txt
-/MODERATOR.txt
 /client1
 /delete
-/CapstoneProjectSubmissionCriteria.txt
+/Documentation/CapstoneProjectSubmissionCriteria.txt
+/Documentation/MODERATOR.txt
+/Documentation/todo.txt
