--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix ../client && npm run build --prefix ../client"
+    "dev": "nodemon server.js"
   },
   "author": "MR DP Nelson",
   "license": "ISC",
@@ -17,7 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.0",
+    "mongoose": "^6.5.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
