--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "dev": "nodemon server.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
@@ -18,7 +18,9 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "dotenv": "^16.0.1",
+    "nodemon": "^2.0.19"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
