--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "nodemon server.js",
     "dev": "nodemon server.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
@@ -23,7 +23,9 @@
     "nodemon": "^2.0.19"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
     "dotenv": "^16.0.1",
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.19"
   },
   "engines": {
